--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "debounce": "^1.2.0",
     "firebase": "^8.2.7",
+    "javascript-time-ago": "^2.3.4",
     "vue": "^2.6.11",
     "vuefire": "^2.2.5"
   },
